--- a/ICControls/src/main/res/layout/activity_ic_activity_izzi_registro.xml
+++ b/ICControls/src/main/res/layout/activity_ic_activity_izzi_registro.xml
@@ -67,7 +67,7 @@
                     android:ems="6"
                     android:maxLength="8"
                     android:layout_marginLeft="5dp"
-                    android:textSize="15sp"
+                    android:textSize="15dp"
                     android:hint="Número de cuenta"
                     android:background="@drawable/woval"
                     android:layout_gravity="center_vertical"
@@ -94,7 +94,7 @@
                     android:inputType="textEmailAddress"
                     android:ems="6"
                     android:layout_marginLeft="5dp"
-                    android:textSize="15sp"
+                    android:textSize="15dp"
                     android:hint="usuario (Correo@ejemplo.com)"
                     android:background="@drawable/woval"
                     android:layout_gravity="center_vertical"
