--- a/app/src/main/res/layout/activity_btf_landing.xml
+++ b/app/src/main/res/layout/activity_btf_landing.xml
@@ -27,7 +27,7 @@
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
                 android:textAlignment="center"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:gravity="center"
                 android:text="Ingresar"/>
             </RelativeLayout>
@@ -40,7 +40,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:clickable="true"
                 android:onClick="registro"
                 android:textAlignment="center"
