--- a/app/src/main/res/layout/activity_edit_account.xml
+++ b/app/src/main/res/layout/activity_edit_account.xml
@@ -82,7 +82,7 @@
                         android:textColor="#828282"
                         android:text="Nombre"
                         android:textAllCaps="true"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
                         android:gravity="center_vertical"
@@ -97,7 +97,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#000"
                         android:text="NOMBRE"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:layout_marginLeft="55dp"
                         android:id="@+id/nombre"
                         android:layout_gravity="center_vertical"
@@ -137,7 +137,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#828282"
                         android:text="Número de cuenta"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textAllCaps="true"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
@@ -153,7 +153,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#000"
                         android:text="NOMBRE"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:layout_marginLeft="55dp"
                         android:id="@+id/cuenta"
                         android:layout_gravity="center_vertical"
@@ -193,7 +193,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#828282"
                         android:text="Email"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textAllCaps="true"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
@@ -209,7 +209,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#000"
                         android:text="NOMBRE"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:layout_marginLeft="55dp"
                         android:id="@+id/mail"
                         android:layout_gravity="center_vertical"
@@ -246,7 +246,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#828282"
                         android:text="Tu contraseña anterior:"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textAllCaps="true"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
@@ -286,7 +286,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#828282"
                         android:text="Tu nueva contraseña:"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textAllCaps="true"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
@@ -329,7 +329,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#828282"
                         android:text="Contraseña"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textAllCaps="true"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
@@ -345,7 +345,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#000"
                         android:text="*********"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:layout_marginLeft="55dp"
 
                         android:layout_gravity="center_vertical"
@@ -420,7 +420,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#828282"
                         android:text="Teléfono móvil"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textAllCaps="true"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
@@ -437,7 +437,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#000"
                         android:text="NOMBRE"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:layout_marginLeft="55dp"
                         android:id="@+id/movil"
                         android:layout_gravity="center_vertical"
@@ -481,7 +481,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#828282"
                         android:text="Dirección"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textAllCaps="true"
                         android:layout_marginLeft="15dp"
                         android:layout_gravity="center_vertical"
@@ -498,7 +498,7 @@
                         android:layout_width="match_parent"
                         android:textColor="#000"
                         android:text="NOMBRE"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:layout_marginLeft="55dp"
                         android:id="@+id/address"
                         android:layout_gravity="center_vertical"
