--- a/app/src/main/res/layout/activity_legales.xml
+++ b/app/src/main/res/layout/activity_legales.xml
@@ -33,7 +33,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:layout_marginLeft="10dp"
                     android:text="Términos y Condiciones Legales izzi"
                     android:layout_centerVertical="true"
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:layout_marginLeft="10dp"
                     android:text="Términos y Condiciones del App"
                     android:layout_centerVertical="true"
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:layout_marginLeft="10dp"
                     android:text="Aviso de privacidad"
                     android:layout_centerVertical="true"
