--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
                 android:ems="6"
                 android:layout_marginLeft="6dp"
                 android:layout_marginRight="4dp"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:hint="(Correo@ejemplo.com)"
                 android:background="#FFFFFF"
                 android:layout_gravity="center_vertical"
@@ -106,7 +106,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:textSize="12sp"
+                    android:textSize="12dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:clickable="true"
@@ -129,7 +129,7 @@
         android:layout_marginRight="40dp"
         android:text="¿Olvidaste tu contraseña?"
         android:gravity="center"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_height="wrap_content" />
     <TextView
         android:layout_width="wrap_content"
@@ -141,7 +141,7 @@
         android:textStyle="bold"
         android:clickable="true"
         android:onClick="registro"
-        android:textSize="16sp"
+        android:textSize="16dp"
 
         android:gravity="center"
         android:layout_height="wrap_content" />
