--- a/app/src/main/res/layout/card_edit_item.xml
+++ b/app/src/main/res/layout/card_edit_item.xml
@@ -38,7 +38,7 @@
                     android:layout_marginTop="3dp"
                     android:layout_centerHorizontal="true"
                     android:gravity="center_vertical"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:layout_gravity="center_vertical"
                     android:textColor="#000"
                     android:text="●●●●●●●●●●●●5478"/>
