--- a/ICControls/src/main/res/layout/activity_consent.xml
+++ b/ICControls/src/main/res/layout/activity_consent.xml
@@ -98,7 +98,7 @@
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
                 android:textAlignment="center"
-                android:textSize="19sp"
+                android:textSize="19dp"
 
                 android:gravity="center"
                 android:text="@string/ic_can"/>
@@ -112,7 +112,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:clickable="true"
                 android:onClick="permitir"
                 android:textAlignment="center"
