--- a/ICControls/src/main/res/layout/activity_izzi_connect_contrata.xml
+++ b/ICControls/src/main/res/layout/activity_izzi_connect_contrata.xml
@@ -39,7 +39,7 @@
             android:textStyle="normal"
             android:gravity="center"
             android:textColor="#fff"
-            android:textSize="19sp"
+            android:textSize="19dp"
             android:textAlignment="center"
             android:text="@string/ic_contrata"/>
         <ImageView
@@ -55,7 +55,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:gravity="center"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:layout_marginTop="15dp"
             android:textColor="#fff"
             android:textAlignment="center"
@@ -79,7 +79,7 @@
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
                 android:textAlignment="center"
-                android:textSize="19sp"
+                android:textSize="19dp"
 
                 android:gravity="center"
                 android:text="@string/ic_can"/>
@@ -95,7 +95,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:textColor="#fff"
-                android:textSize="14sp"
+                android:textSize="14dp"
 
                 android:textAlignment="center"
                 android:gravity="center"
