--- a/ICControls/src/main/res/layout/ic_activity_izzi_connect.xml
+++ b/ICControls/src/main/res/layout/ic_activity_izzi_connect.xml
@@ -60,7 +60,7 @@
                     android:inputType="textEmailAddress"
                     android:ems="6"
                     android:layout_marginLeft="5dp"
-                    android:textSize="15sp"
+                    android:textSize="15dp"
                     android:hint="usuario (Correo@ejemplo.com)"
                     android:background="@drawable/woval"
                     android:layout_gravity="center_vertical"
@@ -149,7 +149,7 @@
             android:text="O"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:layout_height="wrap_content" />
         <LinearLayout
             android:layout_width="0dp"
