--- a/app/src/main/res/layout/activity_dr_wifi.xml
+++ b/app/src/main/res/layout/activity_dr_wifi.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:singleLine="false"
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_margin="15dp"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="#000"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="¿En qué podemos ayudarte?"/>
@@ -54,7 +54,7 @@
                     android:layout_height="fill_parent"
                     android:inputType="textMultiLine"
                     android:ems="6"
-                    android:textSize="15sp"
+                    android:textSize="15dp"
                     android:gravity="top|left"
                     android:background="#FFFFFF"
 
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textColor="#000"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="¿Cómo deseas contactarnos?"/>
@@ -105,7 +105,7 @@
                         android:layout_height="fill_parent"
                         android:textColor="#fff"
                         android:text="Teléfono"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:textStyle="bold"
                         android:layout_gravity="center"
                         android:gravity="center"
@@ -126,7 +126,7 @@
                 android:textColor="#fff"
                 android:text="Chat"
                 android:textStyle="bold"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 />
