--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -21,7 +21,7 @@
             android:layout_marginBottom="10dp"
             android:text="Elimina o agrega tu tarjeta de crédito ó débito"
             android:textStyle="bold"
-            android:textSize="15sp"/>
+            android:textSize="15dp"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
             android:visibility="gone"
             android:id="@+id/nocards"
             android:text="Actualmente no tienes ninguna tarjeta registrada"
-            android:textSize="15sp"/>
+            android:textSize="15dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
@@ -71,7 +71,7 @@
                     android:text="Agrega tarjeta"
                     android:textColor="#FFA807"
                     android:layout_marginLeft="5dp"
-                    android:textSize="15sp"
+                    android:textSize="15dp"
                     android:gravity="center"
                     android:layout_centerHorizontal="true" />
             </LinearLayout>
