--- a/app/src/main/res/layout/activity_edo_cuenta.xml
+++ b/app/src/main/res/layout/activity_edo_cuenta.xml
@@ -10,16 +10,30 @@
         android:orientation="vertical"
         >
     <include layout="@layout/headerextra" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="130dp">
+            android:layout_height="150dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:textColor="@color/izzi_text_color"
+                android:textSize="14dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Periodo del:"
+                android:layout_marginLeft="3dp"
+                android:id="@+id/periodo"
+                android:layout_height="wrap_content"
+                />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Total a pagar"
-                android:textSize="19sp"
+                android:textSize="19dp"
                 android:gravity="center_horizontal"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/izzi_rosa"/>
@@ -32,7 +46,7 @@
                 android:id="@+id/totalText"
                 android:textColor="#666"
                 android:gravity="center_horizontal"
-                android:textSize="30sp"
+                android:textSize="30dp"
                  />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,7 +67,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:textSize="15sp"
+                    android:textSize="15dp"
 
                     android:text="Aclaraciones"
                     android:id="@+id/aclara"
@@ -68,58 +82,13 @@
                 android:layout_marginTop="9dp"
                 android:background="#bebebe"></LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:id="@+id/container_edo"
             android:orientation="vertical"
             android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/izzi_turquesa"
-            android:padding="11dp"
-            >
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:textColor="@color/izzi_text_color"
-                    android:textSize="17sp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:text="JUNIO"
-                    android:id="@+id/mes"
-                    android:layout_height="wrap_content" />
-
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:textColor="@color/izzi_text_color"
-                    android:textSize="17sp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="Periodo del:"
-                    android:layout_marginLeft="3dp"
-                    android:id="@+id/periodo"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    />
-
-                </LinearLayout>
-
-                </LinearLayout>
-        </RelativeLayout>
 
         <ScrollView
             android:layout_width="fill_parent"
@@ -135,7 +104,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="@color/izzi_gris_dd1">
+                    android:background="#bebebe">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
@@ -190,7 +159,8 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="@color/izzi_gris_dd1">
+                    android:background="#bebebe">
+
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
@@ -198,9 +168,11 @@
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
-                        android:text="Cargos del mes "
+                        android:text="Servicios contratados "
                         android:gravity="center_vertical"
-                        android:layout_weight=".5"/>
+                        android:layout_weight=".5"
+                        android:id="@+id/textView12" />
+
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
@@ -213,6 +185,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
+
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="0dp"
@@ -225,14 +198,7 @@
                         android:gravity="center_vertical"
                         android:layout_weight=".5"/>
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="fill_parent"
-                        android:textColor="@color/izzi_text_color"
-                        android:textSize="14dp"
-                        android:id="@+id/intTot"
-                        android:gravity="center"
-                        android:layout_weight=".5"/>
+
 
                     <TextView
                         android:layout_width="0dp"
@@ -248,6 +214,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:id="@+id/tel"
+                    android:visibility="gone"
                     android:orientation="horizontal"
                     >
                     <TextView
@@ -273,6 +240,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:id="@+id/inter"
+                    android:visibility="gone"
                     android:orientation="horizontal"
                    >
                     <TextView
@@ -284,12 +252,21 @@
                         android:text="Internet"
                         android:gravity="center_vertical"
                         android:layout_weight=".5"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:textColor="@color/izzi_text_color"
+                        android:textSize="14dp"
+                        android:id="@+id/intTot"
+                        android:gravity="center"
+                        android:layout_weight=".5"/>
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:id="@+id/tv"
+                    android:visibility="gone"
                     android:orientation="horizontal"
                     >
                     <TextView
@@ -315,6 +292,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:id="@+id/veo"
+                    android:background="#bebebe"
                     android:orientation="horizontal"
                     >
                     <TextView
@@ -323,15 +301,18 @@
                         android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
-                        android:text="VEO"
+                        android:text="Complementos"
                         android:gravity="center_vertical"
+                        android:textStyle="bold"
                         android:layout_weight=".5"/>
+
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
                         android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/veoTot"
+                        android:textStyle="bold"
                         android:gravity="center"
                         android:layout_weight=".5"/>
 
@@ -348,7 +329,7 @@
                         android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
-                        android:text="Otros cargos"
+                        android:text="Cargos variables"
                         android:gravity="center_vertical"
                         android:layout_weight=".5"/>
                     <TextView
@@ -365,6 +346,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:id="@+id/bon"
+                    android:visibility="gone"
                     android:orientation="horizontal"
                     >
                     <TextView
@@ -376,6 +358,7 @@
                         android:text="Bonificaciones"
                         android:gravity="center_vertical"
                         android:layout_weight=".5"/>
+
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
@@ -390,7 +373,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="@color/izzi_gris_dd1">
+                    android:visibility="gone">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
@@ -414,6 +397,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
+                    android:background="#bebebe"
                     android:orientation="horizontal"
                     >
                     <TextView
@@ -440,7 +424,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="20dp"
                     android:layout_marginLeft="10dp"
-                    android:textSize="11sp"
+                    android:textSize="11dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:id="@+id/infop"
@@ -449,7 +433,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="@color/izzi_gris_dd1">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
@@ -483,8 +467,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_marginBottom="51dp"
+        android:visibility="gone"
         android:layout_height="match_parent"
-        android:layout_marginTop="175dp"
+        android:layout_marginTop="195dp"
         android:id="@+id/vista"
         android:background="#eaeaea"
         >
@@ -499,7 +484,7 @@
             android:src="@drawable/nobill"
             android:layout_height="200dp" />
             <TextView
-                android:layout_width="300sp"
+                android:layout_width="300dp"
                 android:gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
@@ -507,7 +492,7 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textColor="#000"
-                android:textSize="20sp"
+                android:textSize="16dp"
                 android:text="Lo sentimos, aun no esta disponible el detalle de tu factura de este mes."/>
         </LinearLayout>
 
@@ -546,7 +531,7 @@
 
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:textSize="10sp"
+                android:textSize="10dp"
                 android:textColor="#000"/>
         </LinearLayout>
 
@@ -571,7 +556,7 @@
 
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:textSize="10sp"
+                android:textSize="10dp"
                 android:textColor="#000"/>
         </LinearLayout>
 
@@ -596,7 +581,7 @@
 
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:textSize="10sp"
+                android:textSize="10dp"
                 android:textColor="#000"/>
         </LinearLayout>
 
