--- a/app/src/main/res/layout/activity_lista_pagos.xml
+++ b/app/src/main/res/layout/activity_lista_pagos.xml
@@ -128,7 +128,7 @@
 
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:textSize="10sp"
+                android:textSize="10dp"
                 android:textColor="#000"/>
         </LinearLayout>
 
@@ -153,7 +153,7 @@
 
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:textSize="10sp"
+                android:textSize="10dp"
                 android:textColor="#000"/>
         </LinearLayout>
 
@@ -175,7 +175,7 @@
 
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:textSize="10sp"
+                android:textSize="10dp"
                 android:textColor="#000"/>
         </LinearLayout>
 
