--- a/app/src/main/res/layout/activity_pagos_main.xml
+++ b/app/src/main/res/layout/activity_pagos_main.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_marginTop="10dp"
-                    android:textSize="20sp"
+                    android:textSize="20dp"
                     android:textColor="#000"
                     android:text="Total a pagar"
                     />
@@ -44,7 +44,7 @@
                     android:layout_marginTop="10dp"
                     android:textColor="#000"
                     android:textStyle="bold"
-                    android:textSize="30sp"
+                    android:textSize="30dp"
                     android:id="@+id/totalText"
                     android:text="$0.00"
                     />
@@ -64,7 +64,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:textColor="#000"
-                        android:textSize="16sp"
+                        android:textSize="16dp"
                         android:gravity="center"
                         android:text="Mes de facturación"
                         />
@@ -73,7 +73,7 @@
                         android:layout_height="fill_parent"
                         android:gravity="center"
                         android:textColor="#000"
-                        android:textSize="19sp"
+                        android:textSize="19dp"
                         android:textStyle="bold"
                         android:id="@+id/fechaTextMonth"
                         android:text="Junio"
@@ -89,7 +89,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:id="@+id/leyenda1Text"
                         android:textColor="#000"
                         android:text="Pagar antes de"
@@ -99,7 +99,7 @@
                         android:layout_height="fill_parent"
                         android:gravity="center"
                         android:textColor="#000"
-                        android:textSize="19sp"
+                        android:textSize="19dp"
                         android:id="@+id/fechaText"
                         android:text="Junio"
                         />
@@ -152,7 +152,7 @@
                     android:id="@+id/vendortjt"
                     android:layout_centerHorizontal="true"
                     android:textColor="#000"
-                    android:textSize="17sp"
+                    android:textSize="17dp"
                     android:layout_marginBottom="10dp"
                    android:layout_alignParentBottom="true"
                     android:text="01 / 23"/>
@@ -170,7 +170,7 @@
                         android:layout_alignParentRight="true"
                         android:gravity="center_vertical"
                         android:layout_centerVertical="true"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:layout_centerInParent="true"
 
                         android:textColor="#000"
@@ -217,7 +217,7 @@
                 android:layout_height="fill_parent"
                 android:text="+"
                 android:textColor="#fff"
-                android:textSize="30sp"
+                android:textSize="30dp"
                 android:gravity="center"
                 android:layout_centerHorizontal="true" />
         </LinearLayout>
@@ -240,7 +240,7 @@
                 android:layout_height="fill_parent"
                 android:text="Pagar"
                 android:textColor="#fff"
-                android:textSize="17sp"
+                android:textSize="17dp"
                 android:gravity="center"
 
                 android:layout_centerHorizontal="true" />
