--- a/app/src/main/res/layout/activity_paperless.xml
+++ b/app/src/main/res/layout/activity_paperless.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="#000"
-            android:textSize="17sp"
+            android:textSize="17dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
             android:layout_gravity="left"
@@ -41,7 +41,7 @@
             android:singleLine="false"
             android:textColor="#000"
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_gravity="left"
             android:gravity="left"
             android:text="¡Gracias por cuidar el medio ambiente! izzi te enviará mensualmente un correo electrónico para avisarte que tu estado de cuenta se encuentra disponible en línea"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="#000"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="left"
@@ -63,7 +63,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#00C1B5"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="left"
@@ -75,7 +75,7 @@
             android:singleLine="false"
             android:textColor="#000"
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_gravity="left"
             android:gravity="left"
             android:text="Cada estado de cuenta podrá ser revisado las veces que quieras desde tu cuenta de servicios en linea izzi"
@@ -86,7 +86,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#00C1B5"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="left"
@@ -98,7 +98,7 @@
             android:singleLine="false"
             android:textColor="#000"
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_gravity="left"
             android:gravity="left"
             android:text="Recibe puntualmente un recordatorio para consultar tu estado de cuenta en línea y ahorra papel, espacio y tiempo para buscar la información."
@@ -146,7 +146,7 @@
                     android:textColor="#fff"
                     android:text="Suscribirme"
                     android:textStyle="bold"
-                    android:textSize="15sp"
+                    android:textSize="15dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     />
