--- a/app/src/main/res/layout/activity_payment_ok.xml
+++ b/app/src/main/res/layout/activity_payment_ok.xml
@@ -28,7 +28,7 @@
         android:layout_gravity="center_horizontal"
         android:text="¡Listo!"
         android:gravity="clip_horizontal"
-        android:textSize="18sp"/>
+        android:textSize="18dp"/>
 
     <ImageView
         android:layout_width="130dp"
@@ -49,7 +49,7 @@
         android:layout_gravity="center_horizontal"
         android:text="Tu pago se ha realizado exitosamente"
         android:gravity="clip_horizontal"
-        android:textSize="14sp"/>
+        android:textSize="14dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
         android:text="Éste se verá reflejado en aproximadamente 30 minutos."
         android:gravity="center"
         android:textColor="#000"
-        android:textSize="14sp"/>
+        android:textSize="14dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
         android:text="Codigo de confirmación:"
         android:gravity="clip_horizontal"
         android:textColor="#000"
-        android:textSize="14sp"/>
+        android:textSize="14dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
         android:textColor="#000"
         android:id="@+id/autorizacion"
         android:gravity="clip_horizontal"
-        android:textSize="18sp"/>
+        android:textSize="18dp"/>
 </LinearLayout>
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -111,7 +111,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:layout_marginLeft="5dp"
                 android:text="Listo"
                 android:layout_centerVertical="true"
