--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#cacaca"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:textStyle="bold"
                     android:textColor="#fff"
                     android:gravity="center"
@@ -62,7 +62,7 @@
                         android:id="@+id/price"
                         android:textColor="#000"
                         android:textStyle="bold"
-                        android:textSize="19sp"
+                        android:textSize="19dp"
                         android:text="uitorkjdnk"
                         android:gravity="center"/>
                     </LinearLayout>
@@ -74,7 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
             android:padding="15dp"
-            android:textSize="17sp"
+            android:textSize="17dp"
         android:layout_marginTop="30dp"
         android:textColor="#000"
         android:text="Al completar tu contratación, recibirás un correo electrónico confirmando los detalles de tu compra"
@@ -96,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:text="Contratar"
                 android:textColor="#fff"
@@ -113,7 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:text="No, no lo quiero"
                 android:textColor="#fff"
