--- a/app/src/main/res/layout/activity_recupera_fin.xml
+++ b/app/src/main/res/layout/activity_recupera_fin.xml
@@ -72,7 +72,7 @@
             android:layout_gravity="center"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:textSize="17sp"
+            android:textSize="17dp"
             android:textStyle="bold"
             android:layout_marginBottom="15dp"
             android:textColor="#fff"
