--- a/app/src/main/res/layout/activity_recupera_pass.xml
+++ b/app/src/main/res/layout/activity_recupera_pass.xml
@@ -51,7 +51,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
             android:textColor="#000"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:gravity="center"/>
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -102,7 +102,7 @@
         android:layout_gravity="center"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         android:layout_marginBottom="15dp"
         android:textColor="#fff"
@@ -118,7 +118,7 @@
             android:layout_gravity="center"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:textSize="17sp"
+            android:textSize="17dp"
             android:textStyle="bold"
             android:layout_marginBottom="15dp"
             android:textColor="#fff"
