--- a/app/src/main/res/layout/activity_registro_main_activity.xml
+++ b/app/src/main/res/layout/activity_registro_main_activity.xml
@@ -33,7 +33,7 @@
         android:text="Crear cuenta"
         android:textColor="#000"
         android:id="@+id/textView"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -71,7 +71,7 @@
                 android:maxLength="9"
                 android:layout_marginLeft="6dp"
                 android:layout_marginRight="4dp"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:hint="Número de cuenta"
                 android:background="#FFFFFF"
                 android:layout_gravity="center_vertical"
@@ -110,7 +110,7 @@
                 android:ems="6"
                 android:layout_marginLeft="6dp"
                 android:layout_marginRight="4dp"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:hint="(Correo@ejemplo.com)"
                 android:background="#FFFFFF"
                 android:layout_gravity="center_vertical"
@@ -159,7 +159,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:textSize="12sp"
+                android:textSize="12dp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:clickable="true"
@@ -220,7 +220,7 @@
         android:onClick="register"
 
         android:layout_gravity="center"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         android:textColor="#fff"
         android:layout_alignParentBottom="true"
