--- a/app/src/main/res/layout/activity_servicios.xml
+++ b/app/src/main/res/layout/activity_servicios.xml
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_width="match_parent"
-                        android:textSize="13sp"
+                        android:textSize="13dp"
                         android:layout_marginTop="5dp"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center"
@@ -207,7 +207,7 @@
             android:layout_height="match_parent"
             android:textColor="#fff"
             android:gravity="center"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textStyle="bold"
             android:text="Continuar"/>
 
