--- a/app/src/main/res/layout/activity_smsconfirma.xml
+++ b/app/src/main/res/layout/activity_smsconfirma.xml
@@ -22,7 +22,7 @@
         android:text="Código de confirmación"
         android:textColor="#000"
         android:id="@+id/textView"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
     <LinearLayout
@@ -41,7 +41,7 @@
             android:text="Te hemos enviado un código de confirmación a:"
             android:textColor="#000"
             android:id="@+id/textView2"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
         <TextView
@@ -53,7 +53,7 @@
             android:text="Hemos enviado un correo electrónico a :"
             android:textColor="#000"
             android:id="@+id/email"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
@@ -66,7 +66,7 @@
             android:text="Por favor ingresa el código"
             android:textColor="#000"
 
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
     <LinearLayout
@@ -89,7 +89,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:hint="Código"
             android:background="#FFFFFF"
             android:layout_gravity="center_vertical"
@@ -110,7 +110,7 @@
         android:gravity="center"
         android:text="¿No recibiste el código?"
         android:textColor="#D60270"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
     <TextView
@@ -121,7 +121,7 @@
         android:clickable="true"
         android:onClick="close"
         android:layout_gravity="center"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         android:textColor="#fff"
         android:layout_alignParentBottom="true"
