--- a/app/src/main/res/layout/complemento_internet.xml
+++ b/app/src/main/res/layout/complemento_internet.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#717171"
                 android:gravity="center_horizontal"
-                android:textSize="17sp"
+                android:textSize="17dp"
                 android:id="@+id/intextname"
                 android:maxHeight="50dp"
 
@@ -43,7 +43,7 @@
                     android:textColor="@color/izzi_rosa"
                     android:gravity="left"
                     android:textStyle="bold"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:text="+ "
                     />
                 <TextView
@@ -53,7 +53,7 @@
                     android:gravity="left"
                     android:id="@+id/extprice"
                     android:textStyle="bold"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:text="$160 mas al mes"
                     />
             </LinearLayout>
