--- a/app/src/main/res/layout/cuenta_list_item.xml
+++ b/app/src/main/res/layout/cuenta_list_item.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/name"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:layout_centerHorizontal="true"
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/cuenta"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="#000"
             android:maxWidth="90dp"
             android:layout_marginTop="10dp"
