--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -62,6 +62,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:alpha=".7"
                 android:layout_centerInParent="true"
                 android:src="@drawable/message_g"/>
             <TextView
@@ -71,7 +72,7 @@
                 android:id="@+id/notificationCount"
                 android:gravity="center"
                 android:text="1"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/notification_container"/>
             </RelativeLayout>
