--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -42,7 +42,7 @@
                                 android:text="Menú"
                                 
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="bold"/>"
 
                             <LinearLayout
@@ -68,7 +68,7 @@
                                 android:layout_marginLeft="50dp"
                                 android:text="Lugares de pago"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
@@ -103,7 +103,7 @@
                                 android:layout_marginLeft="50dp"
                                 android:text="Dr. Wifi"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
@@ -137,7 +137,7 @@
                                 android:layout_marginLeft="50dp"
                                 android:text="Guía de programación"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
@@ -173,7 +173,7 @@
                                 android:layout_marginLeft="50dp"
                                 android:text="Paperless"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
@@ -207,7 +207,7 @@
                                 android:layout_marginLeft="50dp"
                                 android:text="Cambio de usuario"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
@@ -240,7 +240,7 @@
                                 android:layout_marginLeft="50dp"
                                 android:text="Avisos legales"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
@@ -270,7 +270,7 @@
                                 android:layout_marginLeft="20dp"
                                 android:text="Dudas, aclaraciones, contáctanos"
                                 android:textColor="#fff"
-                                android:textSize="13sp"
+                                android:textSize="13dp"
                                 android:textStyle="bold"/>"
 
                             <LinearLayout
@@ -300,7 +300,7 @@
                                 android:layout_marginLeft="75dp"
                                 android:text="Llámanos"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
@@ -338,7 +338,7 @@
                                 android:text="Chatea con nosotros"
                                 android:id="@+id/salir_text"
                                 android:textColor="#fff"
-                                android:textSize="15sp"
+                                android:textSize="15dp"
                                 android:textStyle="normal"/>"
 
                             <ImageView
