--- a/app/src/main/res/layout/pagos_list_item.xml
+++ b/app/src/main/res/layout/pagos_list_item.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentLeft="true"
         android:textColor="#000"
         android:layout_marginLeft="10dp"
-        android:textSize="13sp"
+        android:textSize="13dp"
         android:text="Prueba"/>
     <LinearLayout
         android:orientation="horizontal" android:layout_width="fill_parent"
@@ -50,7 +50,7 @@
         android:layout_alignParentLeft="true"
         android:textColor="#000"
         android:layout_marginLeft="5dp"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:text="Prueba"/>
     </LinearLayout>
         <TextView
@@ -58,7 +58,7 @@
             android:layout_height="fill_parent"
             android:id="@+id/montoL"
             android:textStyle="bold"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:layout_centerHorizontal="true"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/fechaL"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:gravity="center"
             android:layout_gravity="center_vertical"
             android:textColor="#000"
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#fff"
                 android:gravity="center"
-                android:textSize="17sp"
+                android:textSize="17dp"
                 android:layout_marginTop="5dp"
                 android:layout_gravity="center_horizontal"
                 android:text="Enviar estado de cuenta de"/>
@@ -107,7 +107,7 @@
                 android:textColor="#fff"
                 android:gravity="center"
                 android:id="@+id/monthedo"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:layout_marginTop="5dp"
                 android:layout_gravity="center_horizontal"
                 android:text="ABRIL"/>
