--- a/app/src/main/res/layout/popover_showed_view.xml
+++ b/app/src/main/res/layout/popover_showed_view.xml
@@ -21,7 +21,7 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:text="Utiliza tu número de teléfono izzi o tu referencia para pagar en los bancos y establecimientos."
-                android:textSize="13sp"
+                android:textSize="13dp"
                 android:layout_height="wrap_content" />
 
             <LinearLayout
@@ -39,7 +39,7 @@
                     android:gravity="right"
                     android:text="Teléfono: "
                     android:textStyle="bold"
-                    android:textSize="13sp"/>
+                    android:textSize="13dp"/>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight=".5"
@@ -48,7 +48,7 @@
                     android:layout_gravity="left"
                     android:gravity="left"
                     android:id="@+id/tel"
-                    android:textSize="13sp"/>
+                    android:textSize="13dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -65,7 +65,7 @@
                     android:gravity="right"
                     android:text="Cuenta: "
                     android:textStyle="bold"
-                    android:textSize="13sp"/>
+                    android:textSize="13dp"/>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight=".5"
@@ -74,7 +74,7 @@
                     android:layout_gravity="left"
                     android:gravity="left"
                     android:id="@+id/cuenta"
-                    android:textSize="13sp"/>
+                    android:textSize="13dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -91,7 +91,7 @@
                     android:gravity="right"
                     android:text="Referencia: "
                     android:textStyle="bold"
-                    android:textSize="13sp"/>
+                    android:textSize="13dp"/>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight=".5"
@@ -101,7 +101,7 @@
                     android:gravity="left"
                     android:id="@+id/ref"
                     android:layout_marginBottom="10dp"
-                    android:textSize="13sp"/>
+                    android:textSize="13dp"/>
             </LinearLayout>
         </LinearLayout>
 
