--- a/app/src/main/res/layout/popover_showed_view2.xml
+++ b/app/src/main/res/layout/popover_showed_view2.xml
@@ -24,7 +24,7 @@
                 android:layout_gravity="left"
                 android:id="@+id/leyenda2"
                 android:text="Utiliza tu número de teléfonmo izzi o tu referencia para pagar en los bancos y establecimientos."
-                android:textSize="11sp"
+                android:textSize="11dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
