--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -51,7 +51,7 @@
                android:textColor="#fff"
                android:text="Listo"
                android:textStyle="bold"
-               android:textSize="15sp"
+               android:textSize="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                />
