--- a/app/src/main/res/layout/popupcode.xml
+++ b/app/src/main/res/layout/popupcode.xml
@@ -78,7 +78,7 @@
                         android:textColor="#fff"
                         android:text="Pagar"
                         android:textStyle="bold"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:layout_gravity="center"
                         android:gravity="center"
                          />
@@ -97,7 +97,7 @@
                         android:textColor="#fff"
                         android:text="Cancelar"
                         android:textStyle="bold"
-                        android:textSize="15sp"
+                        android:textSize="15dp"
                         android:layout_gravity="center"
                         android:gravity="center"
                        />
