--- a/app/src/main/res/layout/popupdom.xml
+++ b/app/src/main/res/layout/popupdom.xml
@@ -56,7 +56,7 @@
                android:textColor="#fff"
                android:text="De acuerdo"
                android:textStyle="bold"
-               android:textSize="15sp"
+               android:textSize="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                />
@@ -75,7 +75,7 @@
                    android:textColor="#fff"
                    android:text="En otra ocasión"
                    android:textStyle="bold"
-                   android:textSize="15sp"
+                   android:textSize="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
