--- a/app/src/main/res/layout/push_list_item.xml
+++ b/app/src/main/res/layout/push_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentLeft="true"
         android:textColor="#000"
         android:layout_marginLeft="10dp"
-        android:textSize="13sp"
+        android:textSize="13dp"
         android:text="Prueba"/>
     <LinearLayout
         android:orientation="horizontal" android:layout_width="fill_parent"
@@ -47,7 +47,7 @@
         android:textColor="#000"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="40dp"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:text="Prueba"/>
     </LinearLayout>
 
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/fechaL"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:gravity="bottom"
             android:textColor="#000"
             android:textStyle="bold"
